[package]
name = "rust_features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"]}
futures-util = "0.3.29"
anyhow = "1.0.82"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["cors"] }
axum-test = "14.8.0"
socketioxide = "0.12.0"
tokio-tungstenite = { version = "*", features = ["rustls-tls-native-roots"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"